Pair usage in tests replaced by method call